--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -755,3 +755,96 @@ text-align: center;
 display: block;
 }
 
+/* Dashboard Classes */
+
+.dashboard {
+/*  background-color: #f5f5f5;*/
+  margin-bottom: 30px;
+  min-height: 300px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+}
+.dashboard h1 {
+  margin-bottom: 0;
+  font-size: 40px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+.dashboard p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+}
+
+.dashboard ul {
+  list-style: none;
+  min-height: 300px;
+  margin: 0;
+  background-color: #eaeaea;
+  -moz-border-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.dashboard ul li {
+  font-size: 20px;
+  color: #404040;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+}
+
+.dashboard ul li.top {
+  padding: 10px;
+  border-bottom: solid 1px #ddd;
+}
+
+.dashboard ul li a {
+  font-size: 14px;
+  color: #404040;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  padding: 10px;
+  display: block;
+}
+
+.dashboard ul li a:hover {
+  text-decoration: none;
+  background-color: #f5f5f5;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffffff), to(#f5f5f5));
+  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #f5f5f5));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: linear-gradient(top, #ffffff, #f5f5f5);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
+  -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.dashboard ul li a:active, .dashboard ul li a.active {
+  text-decoration: none;
+  background-color: #ffffff;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#f5f5f5), to(#ffffff));
+  background-image: -moz-linear-gradient(top, #f5f5f5, #ffffff);
+  background-image: -ms-linear-gradient(top, #f5f5f5, #ffffff);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f5f5f5), color-stop(100%, #ffffff));
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #ffffff);
+  background-image: -o-linear-gradient(top, #f5f5f5, #ffffff);
+  background-image: linear-gradient(top, #f5f5f5, #ffffff);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#ffffff', GradientType=0);
+  border-bottom: solid 1px #ddd;
+  border-top: solid 1px #ddd;
+}
+
+.dashboard .admin-menu {
+  background-color: #dde4ec;
+  color: #fff;
+}
+
