--- a/app/views/supervisor/dashboard.html.erb
+++ b/app/views/supervisor/dashboard.html.erb
@@ -1,21 +1,25 @@
+<div class="container">
+  
+  <div class="row">
+    <div class="span16">
+      <ul class="breadcrumb">
+        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %></li>
+      </ul>  
+    </div>
+  </div>
+  
+  <div class="dashboard">  
 
-<h1>Supervisor control panel</h1>
-
-<p>content for sidebar:</p>
-
-<ul>
-  <li><%= link_to t('.configuration'), edit_supervisor_network_path %></li>
-  <li><%= link_to t('.courses'), courses_path %></li>
-  <li><%= link_to t('.teachers'), supervisor_teachers_path %></li>
-  <li><%= link_to t('.students'), supervisor_students_path %></li>
-  <li><%= link_to t('.pending_approvals'), supervisor_pending_approvals_path %></li>
-</ul>
-
-<h2>Context</h2>
-<ul class="networks">
-  <% @networks.each do |network| %>
-    <li>
-      <%= link_to network.name, supervisor_dashboard_url(:subdomain => network.subdomain) %>
-    </li>
-  <% end %>
-</ul>
+    <div class="row">
+      <div class="span5">
+        <%= render :partial => "supervisor/shared/admin_menu" %>
+      </div>
+      
+      <div class="span6">
+        
+      </div>
+    </div>
+    <!-- Contexts or Networks should be in a drop-down or the way Github does Contexts -->
+  </div>
+  <%= render :partial => "shared/footer"%>
+</div>
