--- a/app/views/supervisor/pending_approvals.html.erb
+++ b/app/views/supervisor/pending_approvals.html.erb
@@ -1,22 +1,46 @@
+<div class="container">
+  
+  <div class="row">
+    <div class="span16">
+      <ul class="breadcrumb">
+        <li><%= link_to(t('.admin'), supervisor_dashboard_path) %></li>
+      </ul>  
+    </div>
+  </div>
+  
+  <div class="dashboard">  
 
-<div class="users">
-  <% @pending.each do |user| %>
-    <div class="user padding-all <%= cycle('odd', 'even') %>">
-      <div class="row user pending">
-        <%= user.name %>
+    <div class="row">
+      <div class="span5">
+        <%= render :partial => "supervisor/shared/admin_menu" %>
+      </div>
+      
+      <div class="span9">
+        <div class="users">
+          <% @pending.each do |user| %>
+            <div class="user padding-all <%= cycle('odd', 'even') %>">
+              <div class="row user pending">
+                <%= user.name %>
 
-        <div>
-        <%= form_tag supervisor_accept_user_path(user.id), :method => :post do |form| %>
-          <%= submit_tag t('.approve') %>
-        <% end %>
-        </div>
+                <div>
+                <%= form_tag supervisor_accept_user_path(user.id), :method => :post do |form| %>
+                  <%= submit_tag t('.approve') %>
+                <% end %>
+                </div>
 
-        <div style="background-color:red;padding:3px;">
-        <%= form_tag supervisor_reject_user_path(user.id), :method => :post do |form| %>
-          <%= submit_tag t('.reject') %>
-        <% end %>
+                <div style="background-color:red;padding:3px;">
+                <%= form_tag supervisor_reject_user_path(user.id), :method => :post do |form| %>
+                  <%= submit_tag t('.reject') %>
+                <% end %>
+                </div>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
-  <% end %>
+    <!-- Contexts or Networks should be in a drop-down or the way Github does Contexts -->
+  </div>
+  <%= render :partial => "shared/footer"%>
 </div>
+
