--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,5 +1,5 @@
-<%= semantic_form_for Comment.new, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
-  <%= form.inputs :text do %>
+<%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
+    <%= form.inputs :text do %>
     <%= form.input :text, :input_html => {:rows => 1, :class => "span8"} %>
   <% end %>
   <%= form.buttons do %>
