--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= semantic_form_for Comment.new, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
+<%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
   <%= form.inputs :text do %>
     <%= form.input :text, :input_html => {:rows => 3, :class => "textarea-size"} %>
   <% end %>
