a teacher can view deliveries for an assignment

--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -3,6 +3,7 @@
 <%= render :partial => 'assignments/assignment', :locals => {:assignment => @delivery.assignment} %>
 <%= t('.delivered') %>: <%= l @delivery.updated_at, :format => :short %>
 <%= @delivery.content %>
+<%= link_to @delivery.user.name, @delivery.user %>
 <%= render :partial => 'shared/assets_table', :locals => {:record => @delivery} %>
 
 <div class="actions">
