--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -29,6 +29,7 @@
             <% if current_user.manageable_assignments.include? @assignment %>
               <%= link_to t('formtastic.actions.delete'), @assignment, :id => 'delete', :class => 'btn danger right', :style => 'margin-left:10px;', :method => :delete, :confirm => t('confirm_delete') %>
               <%= link_to t('formtastic.actions.edit'), edit_assignment_path(@assignment), :id => 'edit', :class => 'btn info right' %>
+              <%= link_to t('.deliveries'), assignment_deliveries_path(@assignment), :id => 'edit', :class => 'btn info right' %>
             <% else %>
               <%= link_to t('.deliver'), new_assignment_delivery_path(@assignment), :id => 'edit', :class => 'btn info right' %>
               <%= link_to t('.edit_delivery'), edit_assignment_delivery_path(@assignment), :id => 'edit', :class => 'btn info right' %>
