--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,13 @@
 <div class="container">
   <div class="row">
     <div class="span11">
-      <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p>
+      <!-- <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p> -->
+      <div class="network-info">
+        <span class="network-welcome">Bienvenido a Cúrsa.me</span>
+        <%= image_tag(@network.logo_file.large.url) %>
+        <h1><%= @network.slogan %></h1>
+        <h3><%= @network.welcome_message %></h3>
+      </div>
     </div>
     <div class="span5">
       <%= render :partial => 'registrations/form', :locals => {:resource => @user, :resource_name => 'student_user', :url => student_user_registration_path} %>
