fixed broken specs due to translation and view moves

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -43,7 +43,7 @@
           </div>
         </div>
         
-        <h6><%= t('courses.course') %>: <%= @assignment.course.name %></h6>
+        <h6><%= t('.course') %>: <%= @assignment.course.name %></h6>
         <p><%= @assignment.description %></p>
       
         <div class="row">
