--- a/app/views/shared/_assets_table.html.erb
+++ b/app/views/shared/_assets_table.html.erb
@@ -11,7 +11,7 @@
     <tbody>
       <% record.assets.each do |asset| %>
         <tr class='asset'>
-          <td><%= asset.file.url.match(/\.(\w+)$/)[1] %></td>
+          <td><%= image_tag asset.file.thumb_url %></td>
           <td><%= link_to asset.name, asset.file.url %></td>
           <td><%= asset.description %></td>
           <td><%= l asset.created_at, :format => :short %></td>
