[#20854609] AVATARES DEFAULT: Si no tengo avatar veo uno default de acuerdo a mi rol
https://www.pivotaltracker.com/story/show/20854609

--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,7 +1,5 @@
 <div class="underline">
-  <% unless @user.avatar_file.blank? %>
-    <%= image_tag @user.avatar_file.small.url %>
-  <% end %>
+  <%= avatar(@user, 180) %>
 </div>
 
 <div class="underline">	
