--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -12,7 +12,7 @@
   <div class="total-members"><%= course_members(@course) %></div>
   <ul class="nav-member-avatars">
     <% @course.users.each do |avatars| %>
-      <li><%= link_to(image_tag(avatars.avatar_file.xsmall.url), user_path(avatars)) %></li>
+      <li><%= link_to(avatar(avatars, 40), user_path(avatars)) %></li>
     <% end %>
   </ul>
 </div>
