[#22251489] VIEW & STYLES FOR: Como alumno, puedo editar mi entrega en una tarea
https://www.pivotaltracker.com/story/show/22251489

--- a/app/views/students/deliveries/_form_fields.html.erb
+++ b/app/views/students/deliveries/_form_fields.html.erb
@@ -7,5 +7,5 @@
 </div>
 
 <%= form.buttons do %>
-  <%= form.commit_button t('forms.send_delivery'), :button_html => {:id => :submit, :class => 'btn right'} %>
+  <%= form.commit_button form.object.new_record? ? t('forms.send_delivery') : t('forms.update_delivery'), :button_html => {:id => :submit, :class => 'btn right'} %>
 <% end %>
