--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -258,9 +258,11 @@ color: #BFBFBF;
 .wall .actions, 
 .assignments .actions,
 .discussions .actions {
-  	margin-top: 0;
+  margin-top: 0;
  	margin-bottom: 18px;
 	padding: 5px 20px 1px;
+	display: block;
+  overflow: hidden;
 }
 
 .wall .textarea-size, 
@@ -296,6 +298,35 @@ color: #BFBFBF;
 	color: #a9a9a9;
 }
 /* @end */
+
+/* Tabs */
+
+.tabs {
+  margin-bottom: 0;
+  border-bottom: 0;
+}
+
+.tabs > li {
+  top: 2px;
+}
+
+.tabs > li > span {
+  padding: 10px 15px;
+  margin-right: 2px;
+  line-height: 36px;
+  border: 1px solid transparent;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  cursor: default;
+}
+
+.tabs > li.active > span {
+  color: #808080;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+}
 
 /* @group Standard */
 
