VIEW & STYLES FOR Delivery show page, this applies to [#22251381] and [#22252435]
https://www.pivotaltracker.com/story/show/22251381
https://www.pivotaltracker.com/story/show/22252435

--- a/app/views/students/deliveries/new.html.erb
+++ b/app/views/students/deliveries/new.html.erb
@@ -8,7 +8,8 @@
           <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
           <li><%= link_to(@assignment.course.name, course_path(@assignment.course)) %> <span class="divider">/</span></li>
           <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@assignment.course)) %> <span class="divider">/</span></li>
-          <li class="active"><%= @assignment.name %></li>
+          <li><%= link_to @assignment.name, @assignment %> <span class="divider">/</span></li>
+          <li class="active"><%= t('forms.send_delivery') %></li>
         </ul>
       </div>
     </div>
