--- a/app/views/students/deliveries/edit.html.erb
+++ b/app/views/students/deliveries/edit.html.erb
@@ -8,7 +8,9 @@
           <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
           <li><%= link_to(@assignment.course.name, course_path(@assignment.course)) %> <span class="divider">/</span></li>
           <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@assignment.course)) %> <span class="divider">/</span></li>
-          <li class="active"><%= @assignment.name %></li>
+          <li><%= link_to @assignment.name, @assignment %> <span class="divider">/</span></li>
+          <li><%= link_to Delivery.model_name.human, assignment_delivery_path(@assignment) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('forms.update_delivery') %></li>
         </ul>
       </div>
     </div>
