--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -1,18 +1,63 @@
-<h1><%= t('.header') %></h1>
+<div class="container">
+  <div class="content">
 
-<%= render :partial => 'assignments/assignment', :locals => {:assignment => @delivery.assignment} %>
-<%= t('.delivered') %>: <%= l @delivery.updated_at, :format => :short %>
-<%= @delivery.content %>
-<%= link_to @delivery.user.name, @delivery.user %>
-<%= render :partial => 'shared/assets_table', :locals => {:record => @delivery} %>
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@assignment.course.name, course_path(@assignment.course)) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@assignment.course)) %> <span class="divider">/</span></li>
+          <li><%= link_to @assignment.name, @assignment %> <span class="divider">/</span></li>
+          <li class="active"><%= Delivery.model_name.human %></li>
+        </ul>
+      </div>
+    </div>
 
-<div class="actions">
-  <h2><%= t('.comment') %></h2>
-  <%= render :partial => 'comments/form', :locals => {:commentable => @delivery} %>
-</div>
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
 
-<div id="comments">
-  <div class="page">
-    <%= render :partial => 'comments/comments', :locals => {:commentable => @delivery, :comments => @comments} %>
+      <div class="span10 assignments">
+        <h1><%= link_to @assignment.name, @assignment %></h1>
+        <h6><%= t('assignments.show.course') %>: <%= @assignment.course.name %></h6>
+
+        <p><%= @assignment.description %></p>
+
+        <div class="row">
+          <div class="assignment-values bottom-margin">
+            <%= t('courses.assignments.value') %>: <b><%= @assignment.value %></b> -
+            <%= t('courses.assignments.period') %>: <b><%= @assignment.period %></b> -
+            <%= t('courses.assignments.date_time') %>: <b><%= l @assignment.due_to, :format => :short %></b>
+          </div>
+        </div>
+
+        <h3><%= t('.header') %></h3>
+
+        <%= t('.delivered') %>: <%= l @delivery.updated_at, :format => :short %>
+        <%= @delivery.content %>
+        <%= link_to @delivery.user.name, @delivery.user %>
+        <%= render :partial => 'shared/assets_table', :locals => {:record => @delivery} %>
+
+        <div class="well">
+          <h2><%= t('.comment') %></h2>
+          <%= render :partial => 'comments/form', :locals => {:commentable => @delivery} %>
+        </div>
+
+        <div id="comments">
+          <div class="page">
+            <%= render :partial => 'comments/comments', :locals => {:commentable => @delivery, :comments => @comments} %>
+          </div>
+        </div>
+
+
+      </div>
+
+    </div>
+
   </div>
+
 </div>
+
