--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -297,6 +297,20 @@ color: #BFBFBF;
 	margin-left: 20px;
 	color: #a9a9a9;
 }
+
+.delivery {
+  padding: 10px;
+}
+
+.delivery .assignment-values {
+  margin-left: 0;
+}
+
+.delivery img {
+  float: left;
+  margin-right: 20px;
+}
+
 /* @end */
 
 /* Tabs */
@@ -326,6 +340,16 @@ color: #BFBFBF;
   background-color: #ffffff;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
+  background-color: #f5f5f5;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ffffff), to(#f5f5f5));
+  background-image: -moz-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -ms-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(100%, #f5f5f5));
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: -o-linear-gradient(top, #ffffff, #f5f5f5);
+  background-image: linear-gradient(top, #ffffff, #f5f5f5);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
 }
 
 /* @group Standard */
