--- a/app/views/discussions/_form.html.erb
+++ b/app/views/discussions/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form.inputs :basic do %>
   <%= form.input :title, :label => t('discussions.form_title'), :input_html => {:class => "span6"} %>
-  <%= form.input :description, :label => t('discussions.form_description'), :input_html => {:class => "span6"} %>
+  <%= form.input :description, :label => t('discussions.form_description'), :input_html => {:rows => 5, :class => "span6"} %>
 <% end %>
 
 <div class="well">
