--- a/app/views/comments/_comments_tpl.html.erb
+++ b/app/views/comments/_comments_tpl.html.erb
@@ -10,7 +10,7 @@
       <p id="<%= "comment_options_#{comment.id}" %>">
         <% if current_user.can_destroy_comment? comment %>
             <%= link_to t('.remove'), comment, :method => :delete, :remote => true,:confirm => t('confirm_delete'), :html => {:title => 'delete comment'} %>
-            <a href="#" id="<%= "comment_separator_#{comment.id}" %>">|</a>
+            <a href="#">|</a>
         <% end %>
         <% unless Comment === comment.commentable %>
             <%= link_to t('comment'), '#', :class => "toggle_comment_box" %>
