--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,21 +1,19 @@
+var textarea;
 <% if @comment.commentable_type === 'Comment' %>
     var node = $('#comment_<%= @comment.commentable.id %>').closest('.comment').find('.comment-form'),
-        txtarea = $('textarea', node),
-        options,removeoption;
+        options,commnet_link;
+        txtarea = $('textarea', node);
         $('<%= escape_javascript(render(:partial => 'comments/comment_tpl', :locals => {:comment => @comment}))%>').insertBefore(node);
-        txtarea.val(' ');
         /*quitamos el remove de los que ya tienen comentarios*/
-        options = $('#comment_options_<%= @comment.commentable.id %>'),
-        removeoption = options.children(':last-child');
-        options.html(removeoption);
-        removeoption.click(function(){
-            txtarea.focus();
-            return false;
-        });
+        options = $('#comment_options_<%= @comment.commentable.id %>');
+        commnet_link = options.children(':last-child');
+        options.html(commnet_link);
 <%else%>
     var node = $('div.comments');
-    $(node).prepend('<%= escape_javascript(render(:partial => 'comments/comments_tpl', :locals => {:comment => @comment}))%>');
-    $('textarea', $('div.actions')).val(' ');
+        txtarea =$('textarea', $('div.actions')) ;
+        $(node).prepend('<%= escape_javascript(render(:partial => 'comments/comments_tpl', :locals => {:comment => @comment}))%>');
 <%end%>
+txtarea.val(' ');
 $('#comment_<%= @comment.id %>').fadeOut();
 $('#comment_<%= @comment.id %>').fadeIn();
+txtarea.focus();
