--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -55,5 +55,14 @@
 
     </div>
   </div>
+
+  <div id="notifications">
+    <% @notifications.each do |notification| %>
+      <div class='notification'>
+        <%= raw notification_message notification %>
+      </div>
+    <% end %>
+  </div>
+
   <%= render :partial => "shared/footer" %>
 </div>
