teacher can view listing, create and edit surveys

--- a/app/views/courses/_course_menu.html.erb
+++ b/app/views/courses/_course_menu.html.erb
@@ -8,7 +8,8 @@
   <%= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
     <%= tab.course t('courses.information'), course_path(@course), :class => "informacion" %>
     <%= tab.wall t('courses.wall.header'), wall_for_course_path(@course), :class => "actualizaciones" %>
-    <%= tab.assignments Assignment.model_name.human(:count => :many), course_assignments_path(@course), :class => "tareas" %>
+    <%= tab.assignments t('.assignments'), course_assignments_path(@course), :class => "tareas" %>
+    <%= tab.assignments t('.surveys'), course_surveys_path(@course), :class => "surveys" %>
     <%= tab.discussions t('.discussions'), course_discussions_path(@course), :class => "discusiones" %>
   <% end %>
 </div>
