--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -13,7 +13,7 @@ var textarea;
         txtarea =$('textarea', $('div.actions')) ;
         $(node).prepend('<%= escape_javascript(render(:partial => 'comments/comments_tpl', :locals => {:comment => @comment}))%>');
 <%end%>
-txtarea.val(' ');
+txtarea.val('');
 $('#comment_<%= @comment.id %>').fadeOut();
 $('#comment_<%= @comment.id %>').fadeIn();
-txtarea.focus();
+txtarea.blur();
