teacher can create survey

--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -12,5 +12,5 @@
     </fieldset>
 
   <% end %>
-  <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
+  <%= link_to t('.add_question'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
 </fieldset>
