--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -11,5 +11,5 @@
     </fieldset>
 
   <% end %>
-  <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
+  <%= link_to t('.add_answer'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
 </fieldset>
