--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -50,6 +50,11 @@ selected: #e0f5f8
   background-color: #e2453f;
 }
 
+.label-tag.new {
+  background-color: #FFF000;
+  color: #000;
+}
+
 .alert-message.notice {
   background-color: #57a957;
   background-repeat: repeat-x;
@@ -65,6 +70,9 @@ selected: #e0f5f8
   border-color: #57a957 #57a957 #3d773d;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
+
+/* Pagination with Kaminari */
+
 
 /* @end */
 body {
@@ -210,15 +218,6 @@ width: 300px;
 
 .span1 {
 	margin-left: 5px;
-}
-
-.dashboard-box {
-  background-color: #f5f5f5;
-  margin-bottom: 30px;
-  padding: 60px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
 }
 
 .current {
@@ -851,7 +850,35 @@ text-align: center;
 display: block;
 }
 
-/* Dashboard Classes */
+/* Teacher/Student Dashboard Classes */
+
+.dashboard-box {
+  margin-bottom: 30px;
+}
+
+.notification {
+  padding: 5px 0 5px 0;
+  border-bottom: solid 1px #ddd;
+  display: block;
+  overflow: hidden;
+}
+
+.notification .img {
+  float: left;
+  margin-right: 10px;
+}
+
+.notification .date-published {
+  margin-bottom: 5px;
+  color: #C0C0C0;
+  font-weight: bold;
+}
+
+.notification .date-published span {
+  margin: 0 0 2px 10px;
+}
+
+/* Admin Dashboard Classes */
 
 .dashboard {
 /*  background-color: #f5f5f5;*/
