--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -5,6 +5,10 @@
     <%- record = answer.object %>
     <fieldset class="<%= record.new_record? ? :new : nil %>">
       <ol>
+        <li>
+          <%= form.radio_button :answer_uuid, record.uuid %>
+        </li>
+        <%= answer.input :uuid, :as => :hidden %>
         <%= answer.input :text %>
         <%= answer.input :_destroy, :as => :boolean %>
       </ol>
