[#22334637] Como maestro puedo ver un cuestionario
https://www.pivotaltracker.com/story/show/22334637

--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -316,6 +316,17 @@ color: #BFBFBF;
   margin-right: 20px;
 }
 
+
+/* SURVEYS */
+
+.questions { margin-bottom: 50px; }
+.question { }
+
+.answers {}
+.answer { margin-bottom: 10px; }
+.answer input[type=radio] { margin-right: 10px; }
+
+
 /* @end */
 
 /* Tabs */
