--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,3 +1,58 @@
-<h1><%= t('.header') %>: <%= @survey.name %></h1>
+<div class="container">
+  <div class="content">
 
-<%= link_to t('.edit_survey'), edit_survey_path(@survey) %>
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, @course) %> <span class="divider">/</span></li>
+          <li><%= link_to(Survey.model_name.human(:count => :many), course_surveys_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active"><%= @survey.name %></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+
+      <div class="span10 surveys">
+        <div class="row">
+          <div class="span5">
+            <h2 class="titles"><%= t('.header') %>: <%= @survey.name %></h2>
+            <div class="public-course"><%= t('.course') %>: <%= @course.name %></div>
+          </div>
+          <div class="span4">
+            <%= link_to t('.edit_survey'), edit_survey_path(@survey), :class => 'btn info right small' %>
+          </div>
+        </div>
+
+        <div class="row with line">
+          <div class="span6 description no-margin">
+            <p><%= t('courses.surveys.value') %>: <b><%= @survey.value %></b> -
+            <%= t('courses.surveys.period') %>: <b><%= @survey.period %></b> -
+            <%= t('courses.surveys.date_time') %>: <b><%= l @survey.due_to, :format => :short %></b></p>
+          </div>
+        </div>
+
+        <div class="row with line">
+          <div class="description"><%= t('courses.surveys.description') %></div>
+          <div class="expander"><p><%= @survey.description %></p></div>
+        </div>
+
+        <div class="questions">
+          <% if current_user.teacher? %>
+            <%= render :partial => 'question', :collection => @survey.questions %>
+          <% else %>
+            <h1>PENDING: Mostrar vista de cuestinario para estudiantes</h1>
+          <% end %>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
