[#22333805] Puedo ver el nombre del usuario en el listado de avatares del lado izquierdo de un curso en un tooltip https://www.pivotaltracker.com/story/show/22333805

--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -12,7 +12,7 @@
   <div class="total-members"><%= t('courses.members.count', :count => @course.users.count) %></div>
   <ul class="nav-member-avatars">
     <% @course.users.each do |avatars| %>
-      <li><%= link_to(avatar(avatars, :xsmall), user_path(avatars)) %></li>
+      <li><%= link_to(avatar(avatars, :xsmall), user_path(avatars), :rel => "tip", :title => avatars.name) %></li>
     <% end %>
   </ul>
 </div>
