--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -5,7 +5,7 @@
       <div class="span16">
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
-          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
           <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
           <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@course)) %> <span class="divider">/</span></li>
           <li><%= link_to(@assignment.name, assignment_path(@assignment)) %> <span class="divider">/</span></li>
