--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -5,7 +5,7 @@
       <div class="span16">
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
-          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
           <li class="active"><%= @course.name %></li>
         </ul>  
       </div>
