--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,4 +1,35 @@
-<h1><%= t('.header') %></h1>
-<%= semantic_form_for @survey do |form| %>
-  <%= render :partial => 'survey_fields', :locals => {:form => form} %>
-<% end %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li><%= link_to(Survey.model_name.human(:count => :many), course_surveys_path(@course)) %> <span class="divider">/</span></li>
+          <li><%= link_to(@survey.name, survey_path(@survey)) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('.header') %></li>
+        </ul>
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+      
+      <div class="span10">
+        <h2><%= t('.header') %></h2>
+        <%= semantic_form_for @survey do |form| %>
+          <%= render :partial => 'survey_fields', :locals => {:form => form} %>
+        <% end %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+    
+  </div>
+</div>
