--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,14 +1,45 @@
-<h1><%= t('.header') %></h1>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('.header') %></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+      
+      <div class="span10">
+        
+        <div class="row bottom-margin">
+          <div class="span5">
+            <h2><%= t('.header') %></h2>
+          </div>
+          <div class="span3" style="margin-left:45px;">
+            <%- if current_user.manageable_courses.where('courses.id' => @course).count > 0 %>
+              <%= link_to t('.new_survey'), new_course_survey_path(@course), :class => "btn small right" %>
+            <% end %>
+          </div>
+        </div>
 
-<div class="span3">
-  <%= render :partial => "courses/course_menu" %>
-  <%= render :partial => "courses/members_menu" %>
-</div>
-
-<%- if current_user.manageable_courses.where('courses.id' => @course).count > 0 %>
-  <%= link_to t('.new_survey'), new_course_survey_path(@course) %>
-<% end %>
-
-<div class="surveys">
-  <%= render :partial => 'survey', :collection => @surveys %>
+        <div class="surveys">
+          <%= render :partial => 'survey', :collection => @surveys %>
+        </div>
+        
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+    
+  </div>
 </div>
