--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -5,7 +5,7 @@
       <div class="span16">
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
-          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
           <li><%= link_to(@course.name, @course) %> <span class="divider">/</span></li>
           <li><%= link_to(Survey.model_name.human(:count => :many), course_surveys_path(@course)) %> <span class="divider">/</span></li>
           <li class="active"><%= @survey.name %></li>
@@ -27,7 +27,9 @@
             <div class="public-course"><%= t('.course') %>: <%= @course.name %></div>
           </div>
           <div class="span4">
-            <%= link_to t('.edit_survey'), edit_survey_path(@survey), :class => 'btn info right small' %>
+            <% if current_user.manageable_courses.include? @course %>
+              <%= link_to t('.edit_survey'), edit_survey_path(@survey), :class => 'btn info right small' %>
+            <% end %>
           </div>
         </div>
 
