student can answer and view answered surveys

--- a/app/views/surveys/_survey.html.erb
+++ b/app/views/surveys/_survey.html.erb
@@ -3,9 +3,12 @@
   <%= survey.course.name %>
   <div class="row">
     <div class="survey-values">
-      <%= t('courses.surveys.value') %>: <b><%= survey.value %></b> -
-      <%= t('courses.surveys.period') %>: <b><%= survey.period %></b> -
-      <%= t('courses.surveys.date_time') %>: <b><%= l survey.due_to, :format => :short %></b>
+      <%= t('.value') %>: <b><%= survey.value %></b> -
+      <%= t('.period') %>: <b><%= survey.period %></b> -
+      <%= t('.date_time') %>: <b><%= l survey.due_to, :format => :short %></b>
+      <% if current_user.student? %>
+        <%= link_to t('.answer'), new_survey_reply_path(survey) %>
+      <% end %>
     </div>
   </div>
 </div>
